--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,14 @@
 <IfModule mod_rewrite.c>
     RewriteEngine On
-    RewriteCond %{REQUEST_FILENAME} !-f [OR]
+    RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
 
+    # Captura del encabezado de autorización
+    SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
+
+    # Redirección de archivos estáticos (CSS, JS, imágenes)
     RewriteRule \.(?:css|js|jpe?g|gif|png)$ - [L]
+
+    # Redirección para el router de API
     RewriteRule ^api/(.*)$ api-router.php?resource=$1 [QSA,L]
 </IfModule>
